--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/create_event_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="ubiquasif.uqac.betterwithstrangers.CreateEventActivity">
@@ -53,12 +54,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:layout_weight="1"
-                    android:labelFor="@id/private_switch"
+                    android:labelFor="@id/event_private"
                     android:text="@string/private_event"
                     android:textSize="18sp" />
 
                 <Switch
-                    android:id="@+id/private_switch"
+                    android:id="@+id/event_private"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -72,24 +73,28 @@
                 android:id="@+id/event_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="?android:selectableItemBackground"
                 android:clickable="true"
                 android:drawablePadding="16dp"
                 android:drawableStart="@drawable/ic_today_black_24dp"
+                android:focusable="true"
+                android:onClick="onDateClicked"
                 android:paddingBottom="12dp"
                 android:paddingTop="16dp"
-                android:text="27 septembre 2014"
                 android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/event_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="?android:selectableItemBackground"
                 android:clickable="true"
                 android:drawablePadding="16dp"
                 android:drawableStart="@drawable/ic_access_time_black_24dp"
+                android:focusable="true"
+                android:onClick="onTimeClicked"
                 android:paddingBottom="16dp"
                 android:paddingTop="12dp"
-                android:text="20:50"
                 android:textSize="18sp" />
 
             <View
