--- a/app/src/main/res/menu/create_event.xml
+++ b/app/src/main/res/menu/create_event.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_favorite"
-        android:title="@string/create_event"
+        android:id="@+id/action_save_event"
+        android:title="@string/save_event"
         app:showAsAction="ifRoom" />
 </menu>
