--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -81,7 +81,8 @@
                 android:onClick="onDateClicked"
                 android:paddingBottom="12dp"
                 android:paddingTop="16dp"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                tools:text="13 décembre 2017" />
 
             <TextView
                 android:id="@+id/event_time"
@@ -95,7 +96,8 @@
                 android:onClick="onTimeClicked"
                 android:paddingBottom="16dp"
                 android:paddingTop="12dp"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                tools:text="10:30" />
 
             <View
                 android:layout_width="match_parent"
