--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -15,12 +15,12 @@
     </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/create_event_fab"
+        android:id="@+id/map_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:fabSize="normal"
-        app:srcCompat="@drawable/ic_add_white_24dp" />
+        app:srcCompat="@drawable/ic_map_white_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
