--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -106,7 +106,7 @@
 
             <RatingBar
                 android:id="@+id/ratingBar2"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:isIndicator="true" />
 
@@ -126,7 +126,7 @@
 
             <RatingBar
                 android:id="@+id/ratingBar"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:isIndicator="true" />
         </LinearLayout>
