--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -40,10 +40,10 @@
                     android:textSize="24sp" />
 
                 <Button
-                    android:id="@+id/modify_button"
+                    android:id="@+id/save_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Modifier" />
+                    android:text="Sauvegarde" />
             </LinearLayout>
 
         </LinearLayout>
