--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -61,7 +61,7 @@
                 android:text="Minibio" />
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/minibio_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -105,7 +105,7 @@
                 android:text="Notes invité" />
 
             <RatingBar
-                android:id="@+id/ratingBar2"
+                android:id="@+id/guest_ratingBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:isIndicator="true" />
@@ -125,7 +125,7 @@
                 android:text="Notes hôte" />
 
             <RatingBar
-                android:id="@+id/ratingBar"
+                android:id="@+id/host_ratingBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:isIndicator="true" />
